tests/baselines/reference/createArray.errors.txt
tests/cases/compiler/createArray.ts(1,12): error TS2552: Cannot find name 'number'. Did you mean 'Number'?
tests/cases/compiler/createArray.ts(1,18): error TS1150: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
tests/cases/compiler/createArray.ts(6,6): error TS1150: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
tests/cases/compiler/createArray.ts(7,12): error TS2552: Cannot find name 'boolean'. Did you mean 'Boolean'?
tests/cases/compiler/createArray.ts(7,19): error TS1150: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
tests/cases/compiler/createArray.ts(8,12): error TS2552: Cannot find name 'string'. Did you mean 'String'?
tests/cases/compiler/createArray.ts(8,18): error TS1150: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.


==== tests/cases/compiler/createArray.ts (7 errors) ====
    var na=new number[];
               ~~~~~~
!!! error TS2552: Cannot find name 'number'. Did you mean 'Number'?
                     ~~
!!! error TS1150: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
    
    class C {
    }
    
    new C[];
         ~~
!!! error TS1150: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
    var ba=new boolean[];
               ~~~~~~~
!!! error TS2552: Cannot find name 'boolean'. Did you mean 'Boolean'?
                      ~~
!!! error TS1150: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
    var sa=new string[];
               ~~~~~~
!!! error TS2552: Cannot find name 'string'. Did you mean 'String'?
                     ~~
!!! error TS1150: 'new T[]' cannot be used to create an array. Use 'new Array<T>()' instead.
    function f(s:string):number { return 0;
    }
    if (ba[14]) {
        na[2]=f(sa[3]);
    }
    
    new C[1]; // not an error